--- a/K23CNT3-TranThanhTung-WebBanDienThoai/src/main/resources/application.properties
+++ b/K23CNT3-TranThanhTung-WebBanDienThoai/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=K23CNT3-TranThanhTung-WebBanDienThoai
+
+spring.datasource.url=jdbc:mysql://localhost:3306/bandienthoai?useSSL=false&autoReconnect=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=3005005t
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.connection-timeout=20000
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.jdbc.core=DEBUG
+
+#file.upload-dir=E:/project3/Project3/uploads/
